# gitup-no-bookmark

./: .pre-commit-config.yaml  Pipfile  README.md  git-updater.spec  pyproject.toml  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml
gitupdater/: __init__.py  __main__.py  cli.py  update.py
gitupdater/test/: __init__.py  test_cli.py
