[project]
name = ""
version = "0.0.1"
dependencies = [
    "GitPython>= 2.1.8",
    "colorama>= 0.3.9",
    "pyinstaller==6.14.2",
    "pylint==3.3.7",
    "pytest==8.4.1",
    "twine==6.1.0",
]

[dependency-groups]
dev = [
    "pylint",
    "pytest",
    "twine",
    "pyinstaller",
    "exceptiongroup ; python_version < '3.11'",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.scripts]
lint = "pylint --disable=missing-docstring --output-format=colorized gitupdater"
cloc = "cloc --vcs=git"
build = "python setup.py sdist bdist_wheel --universal"
package = "pyinstaller --clean git-updater.spec"
