[project]
name = "gitupdater"
version = "0.0.2"
description = "gitup-no-bookmark is gitup without bookmark, rewrite from earwig/git-repo-updater. I highly recommend you use the original version."
authors = [
    { name = "Ben Kurtovic", email = "ben@benkurtovic.com" },
    { name = "Ayakura Yuki" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["git", "repository", "pull", "update"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "GitPython==3.1.45",
    "colorama==0.4.6",
    "pyinstaller==6.15.0",
    "pylint==3.3.8",
    "pytest==8.4.1",
    "twine==6.1.0",
]

[dependency-groups]
dev = [
    "pylint",
    "pytest",
    "twine",
    "pyinstaller",
    "exceptiongroup ; python_version < '3.11'",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.pyright]
pythonVersion = "3.9"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py39"


# lint = "pylint --disable=missing-docstring --output-format=colorized gitupdater"
# cloc = "cloc --vcs=git"
# build = "python setup.py sdist bdist_wheel --universal"
# package = "pyinstaller --clean git-updater.spec"
# ruff-check = "uvx ruff check"
# ruff-check-fix = "uvx ruff check --fix"
# ruff-format = "uvx ruff format"
